# oliveyoung-voice-assistant

./: .env.example  .gitignore  AI_ASSISTANT_DATA_GUIDE.md  ARCHITECTURE.md  CRAWLER_GUIDE.md  CRAWLER_QUICKSTART.md  ELEVENLABS_TROUBLESHOOTING.md  MANUAL_SCRAPING_GUIDE.md  OLIVEYOUNG_PARSER_README.md  QUICK_START.md  README.md  USE_SAMPLE_DATA.md  convert_manual_data.py  crawl.py  crawl_oliveyoung.py  debug_crawler.py  debug_elevenlabs.py  example_manual_extraction.json  extract_from_html.py  oliveyoung_stock_page.html  oliveyoung_store_page.html  oy_sample.html  parse_oliveyoung_full.py  pyproject.toml  query_assistant_data.py  requirements.txt  run.sh  show_extracted_data.py  test_elevenlabs_audio.py  test_elevenlabs_session.py  test_simple_crawl.py  view_assistant_data.html
data/: assistant_data.json  example_converted.json  oliveyoung_extracted.json  oliveyoung_올리브영_명동_타운_20251110_145948.json  oliveyoung_올리브영_명동_타운_20251110_150052.json  oliveyoung_올리브영_명동_타운_20251110_150429.json  sample_products.json  store_data.json
src/: __init__.py  bot.py  elevenlabs_stt.py  oliveyoung_crawler.py  server.py  store_service.py  websocket_manager.py
tests/: __init__.py  test_oliveyoung_crawler.py  test_store_service.py
